--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "axios": "^0.19.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "save": "^2.4.0",
     "yup": "^0.28.5"
